# LLP

./: CMakeLists.txt  MakeFile  README.md  main.out  ллп1.odt
include/: allocator.h  block.h  comparator.h  converter.h  database.h  record.h  status.h  table.h  types.h
include/hashmap/: abstract_hashmap.h  memory_hashmap.h  table_hashmap.h
include/table/: field.h  field_type.h  record.h  table.h
include/util/: dataType.h
src/: a.out  allocator.c  comparator.c  converter.c  database.c  main.c  test-insert.py  test-other.py  types.c
src/hashmap/: abstract_hashmap.c  memory_hashmap.c  table_hashmap.c
src/table/: field.c  field_type.c  record.c  table.c
src/util/: dataType.c
